@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2018 WolkAbout Technology s.r.o.
+ * Copyright (c) 2021 WolkAbout Technology s.r.o.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -19,11 +19,17 @@ package com.wolkabout.wolk.filemanagement;
 import com.wolkabout.wolk.filemanagement.model.FileTransferError;
 import com.wolkabout.wolk.filemanagement.model.FileTransferStatus;
 import com.wolkabout.wolk.filemanagement.model.platform2device.FileInit;
-import org.apache.commons.codec.binary.Base64;
 import org.apache.commons.codec.digest.DigestUtils;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
+import javax.xml.bind.DatatypeConverter;
+import java.io.ByteArrayInputStream;
+import java.io.IOException;
+import java.io.InputStream;
+import java.security.DigestInputStream;
+import java.security.MessageDigest;
+import java.security.NoSuchAlgorithmException;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
@@ -45,7 +51,6 @@ public class FileDownloadSession {
     private static final int MINIMUM_PACKET_SIZE = 65;
     private static final int PREVIOUS_HASH_SIZE = 32;
     private static final int CURRENT_HASH_SIZE = 32;
-    private static final int CHUNK_SIZE = 250000;
     private static final int MAX_RETRY = 3;
     private static final int MAX_RESTART = 3;
     // The executor
@@ -54,7 +59,7 @@ public class FileDownloadSession {
     private final FileInit initMessage;
     private final Callback callback;
     // The collected data
-    private final List<Integer> chunkSizes;
+    private final List<Long> chunkSizes;
     private final List<Byte> bytes;
     private final List<byte[]> hashes;
     // The main indicators of state
@@ -74,7 +79,7 @@ public class FileDownloadSession {
      * @param callback    The object containing external calls for requesting data and notifying of finish.
      * @throws IllegalArgumentException If any of the arguments is given null, the exception will be thrown.
      */
-    public FileDownloadSession(FileInit initMessage, Callback callback) throws IllegalArgumentException {
+    public FileDownloadSession(FileInit initMessage, Callback callback, long chunkSize) throws IllegalArgumentException {
         if (initMessage == null) {
             throw new IllegalArgumentException("The initial message object can not be null.");
         }
@@ -89,17 +94,22 @@ public class FileDownloadSession {
         this.hashes = new ArrayList<>();
         this.chunkSizes = new ArrayList<>();
 
+        // killobytes
+        chunkSize = chunkSize * 1024 - (PREVIOUS_HASH_SIZE + CURRENT_HASH_SIZE);
+
         // Calculate the chunk count, and each of their sizes
-        long fullSizedChunks = initMessage.getFileSize() / CHUNK_SIZE;
-        long leftoverSizedChunk = initMessage.getFileSize() % CHUNK_SIZE;
+        long fullSizedChunks = chunkSize > 0 ? initMessage.getFileSize() / chunkSize : 1;
+        long leftoverSizedChunk = chunkSize > 0 ? initMessage.getFileSize() % chunkSize : 0;
 
         // Append them all into the list
         for (int i = 0; i < fullSizedChunks; i++) {
-            chunkSizes.add(CHUNK_SIZE + (PREVIOUS_HASH_SIZE + CURRENT_HASH_SIZE));
+            long expectedChunkSize = chunkSize > 0 ? chunkSize : initMessage.getFileSize();
+
+            chunkSizes.add(expectedChunkSize + (PREVIOUS_HASH_SIZE + CURRENT_HASH_SIZE));
         }
 
         if (leftoverSizedChunk > 0) {
-            chunkSizes.add((int) (leftoverSizedChunk + (PREVIOUS_HASH_SIZE + CURRENT_HASH_SIZE)));
+            chunkSizes.add(leftoverSizedChunk + (PREVIOUS_HASH_SIZE + CURRENT_HASH_SIZE));
         }
         LOG.trace("Calculated chunk count for this file: " + chunkSizes.size());
 
@@ -107,21 +117,60 @@ public class FileDownloadSession {
         status = FileTransferStatus.FILE_TRANSFER;
         error = null;
         LOG.trace("Requesting first chunk of data.");
-        executor.execute(new RequestRunnable(initMessage.getFileName(), currentChunk, chunkSizes.get(currentChunk)));
+        executor.execute(new RequestRunnable(initMessage.getFileName(), currentChunk));
     }
 
     /**
      * This is an internal method used to define how a chunk of bytes is hashed.
      *
-     * @param data Input bytes to be calculated a SHA256 hash from.
-     * @return The SHA256 hash of input data as byte array.
+     * @param data Input bytes to be calculated a MD5 hash from.
+     * @return The MD5 hash of input data as byte array.
      */
-    public static byte[] calculateHashForBytes(List<Byte> data) {
+    public static byte[] calculateMD5HashForBytes(List<Byte> data) {
         byte[] bytes = new byte[data.size()];
         for (int i = 0; i < data.size(); i++) {
             bytes[i] = data.get(i);
         }
-        return DigestUtils.sha256(bytes);
+        return calculateMD5HashForBytes(bytes);
+    }
+
+    /**
+     * This is an internal method used to define how a chunk of bytes is hashed.
+     *
+     * @param data Input bytes to be calculated a MD5 hash from.
+     * @return The MD5 hash of input data as byte array.
+     */
+    public static byte[] calculateMD5HashForBytes(byte[] data) {
+        MessageDigest md;
+
+        try {
+            md = MessageDigest.getInstance("MD5");
+        } catch (NoSuchAlgorithmException exception) {
+            LOG.error(exception.getLocalizedMessage());
+            return null;
+        }
+
+        try (InputStream is = new ByteArrayInputStream(data);
+             DigestInputStream dis = new DigestInputStream(is, md);) {
+
+            byte[] buf = new byte[20480];
+            while (dis.read(buf) != -1) {
+                ; //digest is updating
+            }
+
+            return md.digest();
+        } catch (IOException exception) {
+            LOG.error(exception.getLocalizedMessage());
+            return null;
+        }
+    }
+
+    public static byte[] calculateSha256HashForBytes(List<Byte> data) {
+        byte[] bytes = new byte[data.size()];
+        for (int i = 0; i < data.size(); i++) {
+            bytes[i] = data.get(i);
+        }
+        return calculateSha256HashForBytes(bytes);
     }
 
     /**
@@ -130,7 +179,7 @@ public class FileDownloadSession {
      * @param data Input bytes to be calculated a SHA256 hash from.
      * @return The SHA256 hash of input data as byte array.
      */
-    public static byte[] calculateHashForBytes(byte[] data) {
+    public static byte[] calculateSha256HashForBytes(byte[] data) {
         return DigestUtils.sha256(data);
     }
 
@@ -198,7 +247,7 @@ public class FileDownloadSession {
      * it decides that is something it wants to do, because it may be over the limits, and will want to report
      * an error, since it had retried too many times.
      */
-    public synchronized boolean receiveBytes(byte[] receivedBytes) {
+    public synchronized boolean receiveBytes(byte[] receivedBytes) throws IllegalStateException, IllegalArgumentException {
         LOG.trace("Received chunk of bytes. Size of chunk: " + receivedBytes.length + ", " +
                 "current chunk count: " + currentChunk + ".");
 
@@ -222,7 +271,7 @@ public class FileDownloadSession {
             // Analyze the first hash to be all zeroes.
             if (!Arrays.equals(previousHash, new byte[32])) {
                 LOG.warn("Invalid header for first chunk, previous hash is not 0.");
-                return requestChunkAgain(initMessage.getFileName(), currentChunk, chunkSizes.get(currentChunk));
+                return requestChunkAgain(initMessage.getFileName(), currentChunk);
             }
         } else {
             // Analyze the hash of last chunk with the hash received in this message for chunk before.
@@ -236,15 +285,15 @@ public class FileDownloadSession {
                         break;
                     bytes.remove(bytes.size() - 1);
                 }
-                return requestChunkAgain(initMessage.getFileName(), currentChunk, chunkSizes.get(currentChunk));
+                return requestChunkAgain(initMessage.getFileName(), currentChunk);
             }
         }
 
         // Calculate the hash for current data and check it
-        byte[] calculatedHash = calculateHashForBytes(chunkData);
+        byte[] calculatedHash = calculateSha256HashForBytes(chunkData);
         if (!Arrays.equals(calculatedHash, currentHash)) {
             LOG.warn("Hash of the current chunk calculated does not match the sent hash.");
-            return requestChunkAgain(initMessage.getFileName(), currentChunk, chunkSizes.get(currentChunk));
+            return requestChunkAgain(initMessage.getFileName(), currentChunk);
         }
 
         // Append all the chunk data into the bytes
@@ -257,7 +306,7 @@ public class FileDownloadSession {
         // Check if the file is fully here now.
         if (++currentChunk == chunkSizes.size() && initMessage.getFileSize() == bytes.size()) {
             // If the entire file hash is invalid, restart the entire process
-            if (!Arrays.equals(calculateHashForBytes(bytes), Base64.decodeBase64(initMessage.getFileHash()))) {
+            if (!Arrays.equals(calculateMD5HashForBytes(bytes), DatatypeConverter.parseHexBinary(initMessage.getFileHash()))) {
                 return restartDataObtain();
             }
 
@@ -269,13 +318,8 @@ public class FileDownloadSession {
         }
 
         // Request the next chunk
-        if (chunkSizes.size() > 1) {
-            executor.execute(new RequestRunnable(initMessage.getFileName(), currentChunk,
-                    CHUNK_SIZE + PREVIOUS_HASH_SIZE + CURRENT_HASH_SIZE));
-        } else {
-            executor.execute(new RequestRunnable(initMessage.getFileName(), currentChunk,
-                    chunkSizes.get(currentChunk)));
-        }
+        executor.execute(new RequestRunnable(initMessage.getFileName(), currentChunk));
+
         return true;
     }
 
@@ -283,7 +327,7 @@ public class FileDownloadSession {
      * This is an internal method used to define how a chunk for
      * which the current hash is invalid, will be re-obtained.
      */
-    private boolean requestChunkAgain(String fileName, int chunkIndex, int chunkSize) {
+    private boolean requestChunkAgain(String fileName, int chunkIndex) {
         LOG.debug("Requesting a chunk again(" + chunkIndex + ").");
 
         // If we already requested the chunk over the limit, restart the process
@@ -294,7 +338,7 @@ public class FileDownloadSession {
 
         // Increment the counter, and request the chunk again
         ++chunkRetryCount;
-        executor.execute(new RequestRunnable(fileName, chunkIndex, chunkSize));
+        executor.execute(new RequestRunnable(fileName, chunkIndex));
         return true;
     }
 
@@ -338,7 +382,7 @@ public class FileDownloadSession {
 
         // Request the first chunk again
         LOG.debug("Requesting first chunk after restart.");
-        executor.execute(new RequestRunnable(initMessage.getFileName(), 0, chunkSizes.get(0)));
+        executor.execute(new RequestRunnable(initMessage.getFileName(), 0));
         return true;
     }
 
@@ -366,7 +410,7 @@ public class FileDownloadSession {
      * session.
      */
     public interface Callback {
-        void sendRequest(String fileName, int chunkIndex, int chunkSize);
+        void sendRequest(String fileName, int chunkIndex);
 
         void onFinish(FileTransferStatus status, FileTransferError error);
     }
@@ -378,17 +422,15 @@ public class FileDownloadSession {
 
         private final String fileName;
         private final int currentChunk;
-        private final int chunkSize;
 
-        public RequestRunnable(String fileName, int currentChunk, int chunkSize) {
+        public RequestRunnable(String fileName, int currentChunk) {
             this.fileName = fileName;
             this.currentChunk = currentChunk;
-            this.chunkSize = chunkSize;
         }
 
         @Override
         public void run() {
-            callback.sendRequest(fileName, currentChunk, chunkSize);
+            callback.sendRequest(fileName, currentChunk);
         }
     }
 
