@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2018 WolkAbout Technology s.r.o.
+ * Copyright (c) 2021 WolkAbout Technology s.r.o.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -22,20 +22,21 @@ import com.wolkabout.wolk.filemanagement.model.device2platform.ChunkRequest;
 import com.wolkabout.wolk.filemanagement.model.device2platform.FileInformation;
 import com.wolkabout.wolk.filemanagement.model.device2platform.FileStatus;
 import com.wolkabout.wolk.filemanagement.model.device2platform.UrlStatus;
-import com.wolkabout.wolk.filemanagement.model.platform2device.*;
+import com.wolkabout.wolk.filemanagement.model.platform2device.FileDelete;
+import com.wolkabout.wolk.filemanagement.model.platform2device.FileInit;
+import com.wolkabout.wolk.filemanagement.model.platform2device.UrlInfo;
 import com.wolkabout.wolk.util.JsonUtil;
-import org.apache.commons.codec.binary.Base64;
 import org.eclipse.paho.client.mqttv3.MqttClient;
 import org.eclipse.paho.client.mqttv3.MqttException;
 import org.eclipse.paho.client.mqttv3.MqttMessage;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
+import javax.xml.bind.DatatypeConverter;
 import java.io.File;
 import java.io.IOException;
+import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
-import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
@@ -43,26 +44,27 @@ import java.util.concurrent.Executors;
 public class FileManagementProtocol {
 
     protected static final Logger LOG = LoggerFactory.getLogger(FileManagementProtocol.class);
-    protected static final int QOS = 0;
+    protected static final int QOS = 2;
+
+    protected static final String OUT_DIRECTION = "d2p/";
+    protected static final String IN_DIRECTION = "p2d/";
+
     // File upload initiation and input/output topics
-    protected static final String FILE_UPLOAD_INITIATE = "p2d/file_upload_initiate/d/";
-    protected static final String FILE_UPLOAD_STATUS = "d2p/file_upload_status/d/";
-    protected static final String FILE_UPLOAD_ABORT = "p2d/file_upload_abort/d/";
+    protected static final String FILE_UPLOAD_INITIATE = "/file_upload_initiate";
+    protected static final String FILE_UPLOAD_STATUS = "/file_upload_status";
+    protected static final String FILE_UPLOAD_ABORT = "/file_upload_abort";
     // File upload chunk topics
-    protected static final String FILE_BINARY_REQUEST = "d2p/file_binary_request/d/";
-    protected static final String FILE_BINARY_RESPONSE = "p2d/file_binary_response/d/";
+    protected static final String FILE_BINARY_REQUEST = "/file_binary_request";
+    protected static final String FILE_BINARY_RESPONSE = "/file_binary_response";
     // File URL download initiation and input/output topics
-    protected static final String FILE_URL_DOWNLOAD_INITIATE = "p2d/file_url_download_initiate/d/";
-    protected static final String FILE_URL_DOWNLOAD_STATUS = "d2p/file_url_download_status/d/";
-    protected static final String FILE_URL_DOWNLOAD_ABORT = "p2d/file_url_download_abort/d/";
+    protected static final String FILE_URL_DOWNLOAD_INITIATE = "/file_url_download_initiate";
+    protected static final String FILE_URL_DOWNLOAD_STATUS = "/file_url_download_status";
+    protected static final String FILE_URL_DOWNLOAD_ABORT = "/file_url_download_abort";
     // File removal topics
-    protected static final String FILE_DELETE = "p2d/file_delete/d/";
-    protected static final String FILE_PURGE = "p2d/file_purge/d/";
+    protected static final String FILE_DELETE = "/file_delete";
+    protected static final String FILE_PURGE = "/file_purge";
     // File list input/output topics
-    protected static final String FILE_LIST_REQUEST = "p2d/file_list_request/d/";
-    protected static final String FILE_LIST_RESPONSE = "d2p/file_list_response/d/";
-    protected static final String FILE_LIST_UPDATE = "d2p/file_list_update/d/";
-    protected static final String FILE_LIST_CONFIRM = "p2d/file_list_confirm/d/";
+    protected static final String FILE_LIST = "/file_list";
     // The MQTT client
     protected final MqttClient client;
     // The Executor
@@ -72,6 +74,7 @@ public class FileManagementProtocol {
     protected FileDownloadSession fileDownloadSession;
     protected UrlFileDownloadSession urlFileDownloadSession;
     private final UrlFileDownloader urlFileDownloader;
+    protected int maxChunkSize = 0;
 
     /**
      * This is the constructor for the FileManagement feature.
@@ -119,53 +122,46 @@ public class FileManagementProtocol {
     }
 
     /**
-     * This is the method that is used to capture the file list and send it.
-     */
-    public void publishFileList() {
-        LOG.debug("Publishing file list to the platform.");
-        publishFileList(FILE_LIST_UPDATE + client.getClientId());
-    }
-
-    /**
      * This is the main method that uses the passed MqttClient to subscribe to all the topics
      * that need to be subscribed to by the protocol.
      */
     public void subscribe() {
         try {
             // File transfer subscriptions
-            LOG.debug("Subscribing to topic '" + FILE_UPLOAD_INITIATE + client.getClientId() + "'.");
-            client.subscribe(FILE_UPLOAD_INITIATE + client.getClientId(), QOS,
+            LOG.debug("Subscribing to topic '" + IN_DIRECTION + client.getClientId() + FILE_UPLOAD_INITIATE + "'.");
+            client.subscribe(IN_DIRECTION + client.getClientId() + FILE_UPLOAD_INITIATE, QOS,
                     (topic, message) -> executor.execute(() -> handleFileTransferInitiation(topic, message)));
-            LOG.debug("Subscribing to topic '" + FILE_UPLOAD_ABORT + client.getClientId() + "'.");
-            client.subscribe(FILE_UPLOAD_ABORT + client.getClientId(), QOS,
+            LOG.debug("Subscribing to topic '" + IN_DIRECTION + client.getClientId() + FILE_UPLOAD_ABORT + "'.");
+            client.subscribe(IN_DIRECTION + client.getClientId() + FILE_UPLOAD_ABORT, QOS,
                     (topic, message) -> executor.execute(() -> handleFileTransferAbort(topic, message)));
-            LOG.debug("Subscribing to topic '" + FILE_BINARY_RESPONSE + client.getClientId() + "'.");
-            client.subscribe(FILE_BINARY_RESPONSE + client.getClientId(), QOS,
+            LOG.debug("Subscribing to topic '" + IN_DIRECTION + client.getClientId() + FILE_BINARY_RESPONSE + "'.");
+            client.subscribe(IN_DIRECTION + client.getClientId() + FILE_BINARY_RESPONSE, QOS,
                     (topic, message) -> executor.execute(() -> handleFileTransferBinaryResponse(topic, message)));
             // File URL download subscriptions
-            LOG.debug("Subscribing to topic '" + FILE_URL_DOWNLOAD_INITIATE + client.getClientId() + "'.");
-            client.subscribe(FILE_URL_DOWNLOAD_INITIATE + client.getClientId(), QOS,
+            LOG.debug("Subscribing to topic '" + IN_DIRECTION + client.getClientId() + FILE_URL_DOWNLOAD_INITIATE + "'.");
+            client.subscribe(IN_DIRECTION + client.getClientId() + FILE_URL_DOWNLOAD_INITIATE, QOS,
                     (topic, message) -> executor.execute(() -> handleUrlDownloadInitiation(topic, message)));
-            LOG.debug("Subscribing to topic '" + FILE_URL_DOWNLOAD_ABORT + client.getClientId() + "'.");
-            client.subscribe(FILE_URL_DOWNLOAD_ABORT + client.getClientId(), QOS,
+            LOG.debug("Subscribing to topic '" + IN_DIRECTION + client.getClientId() + FILE_URL_DOWNLOAD_ABORT + "'.");
+            client.subscribe(IN_DIRECTION + client.getClientId() + FILE_URL_DOWNLOAD_ABORT, QOS,
                     (topic, message) -> executor.execute(() -> handleUrlDownloadAbort(topic, message)));
             // File deletion subscriptions
-            LOG.debug("Subscribing to topic '" + FILE_DELETE + client.getClientId() + "'.");
-            client.subscribe(FILE_DELETE + client.getClientId(), QOS,
+            LOG.debug("Subscribing to topic '" + IN_DIRECTION + client.getClientId() + FILE_DELETE + "'.");
+            client.subscribe(IN_DIRECTION + client.getClientId() + FILE_DELETE, QOS,
                     (topic, message) -> executor.execute(() -> handleFileDeletion(topic, message)));
-            LOG.debug("Subscribing to topic '" + FILE_PURGE + client.getClientId() + "'.");
-            client.subscribe(FILE_PURGE + client.getClientId(), QOS,
+            LOG.debug("Subscribing to topic '" + IN_DIRECTION + client.getClientId() + FILE_PURGE + "'.");
+            client.subscribe(IN_DIRECTION + client.getClientId() + FILE_PURGE, QOS,
                     (topic, message) -> executor.execute(() -> handleFilePurge(topic, message)));
             // File list subscriptions
-            LOG.debug("Subscribing to topic '" + FILE_LIST_REQUEST + client.getClientId() + "'.");
-            client.subscribe(FILE_LIST_REQUEST + client.getClientId(), QOS,
+            LOG.debug("Subscribing to topic '" + IN_DIRECTION + client.getClientId() + FILE_LIST + "'.");
+            client.subscribe(IN_DIRECTION + client.getClientId() + FILE_LIST, QOS,
                     (topic, message) -> executor.execute(() -> handleFileListRequest(topic, message)));
-            LOG.debug("Subscribing to topic '" + FILE_LIST_CONFIRM + client.getClientId() + "'.");
-            client.subscribe(FILE_LIST_CONFIRM + client.getClientId(), QOS,
-                    (topic, message) -> executor.execute(() -> logReceivedMqttMessage(topic, message)));
         } catch (MqttException exception) {
             LOG.error(exception.getMessage());
         }
+    }
+
+    public void setMaxChunkSize(int maxChunkSize) {
+        this.maxChunkSize = maxChunkSize;
     }
 
     void handleFileTransferInitiation(String topic, MqttMessage message) {
@@ -184,7 +180,7 @@ public class FileManagementProtocol {
         // If there was an error creating the management, report a `FILE_SYSTEM_ERROR`.
         if (this.management == null) {
             LOG.error("File management is not running, returning '" + FileTransferError.FILE_SYSTEM_ERROR + "'.");
-            publish(FILE_UPLOAD_STATUS + client.getClientId(), new FileStatus(initMessage.getFileName(),
+            publish(OUT_DIRECTION + client.getClientId() + FILE_UPLOAD_STATUS, new FileStatus(initMessage.getFileName(),
                     FileTransferStatus.ERROR, FileTransferError.FILE_SYSTEM_ERROR));
             return;
         }
@@ -195,12 +191,12 @@ public class FileManagementProtocol {
             if (matching != null) {
                 if (matching) {
                     LOG.info("File '" + initMessage.getFileName() + "' hashes match, returning 'FILE_READY'.");
-                    publish(FILE_UPLOAD_STATUS + client.getClientId(), new FileStatus(initMessage.getFileName(),
+                    publish(OUT_DIRECTION + client.getClientId() + FILE_UPLOAD_STATUS, new FileStatus(initMessage.getFileName(),
                             FileTransferStatus.FILE_READY));
                 } else {
                     LOG.info("File '" +
                             initMessage.getFileName() + "' hashes do not match, returning 'FILE_HASH_MISMATCH'.");
-                    publish(FILE_UPLOAD_STATUS + client.getClientId(), new FileStatus(initMessage.getFileName(),
+                    publish(OUT_DIRECTION + client.getClientId() + FILE_UPLOAD_STATUS, new FileStatus(initMessage.getFileName(),
                             FileTransferStatus.ERROR, FileTransferError.FILE_HASH_MISMATCH));
                 }
                 return;
@@ -208,7 +204,7 @@ public class FileManagementProtocol {
         } catch (IOException exception) {
             LOG.error("Error occurred during reading of the existing file, returning '" +
                     FileTransferError.FILE_SYSTEM_ERROR + "'.");
-            publish(FILE_UPLOAD_STATUS + client.getClientId(), new FileStatus(initMessage.getFileName(),
+            publish(OUT_DIRECTION + client.getClientId() + FILE_UPLOAD_STATUS, new FileStatus(initMessage.getFileName(),
                     FileTransferStatus.ERROR, FileTransferError.FILE_SYSTEM_ERROR));
             return;
         }
@@ -216,8 +212,8 @@ public class FileManagementProtocol {
         // Start the session
         fileDownloadSession = new FileDownloadSession(initMessage, new FileDownloadSession.Callback() {
             @Override
-            public void sendRequest(String fileName, int chunkIndex, int chunkSize) {
-                handleFileTransferRequest(fileName, chunkIndex, chunkSize);
+            public void sendRequest(String fileName, int chunkIndex) {
+                handleFileTransferRequest(fileName, chunkIndex);
             }
 
             @Override
@@ -225,10 +221,10 @@ public class FileManagementProtocol {
                 handleFileTransferFinish(fileDownloadSession, status, error);
                 fileDownloadSession = null;
             }
-        });
+        }, maxChunkSize);
 
         // Send the transferring message
-        publish(FILE_UPLOAD_STATUS + client.getClientId(), new FileStatus(initMessage.getFileName(),
+        publish(OUT_DIRECTION + client.getClientId() + FILE_UPLOAD_STATUS, new FileStatus(initMessage.getFileName(),
                 FileTransferStatus.FILE_TRANSFER));
     }
 
@@ -237,8 +233,9 @@ public class FileManagementProtocol {
         if ((file = management.getFile(fileName)) != null) {
             LOG.info("File '" + file.getName() + "' already exists.");
             byte[] fileBytes = Files.readAllBytes(file.toPath());
-            byte[] existingFileHash = FileDownloadSession.calculateHashForBytes(fileBytes);
-            return Arrays.equals(existingFileHash, Base64.decodeBase64(fileHash));
+            byte[] existingFileHash = FileDownloadSession.calculateMD5HashForBytes(fileBytes);
+
+            return fileHash.equalsIgnoreCase(DatatypeConverter.printHexBinary(existingFileHash));
         }
         return null;
     }
@@ -252,8 +249,9 @@ public class FileManagementProtocol {
         }
 
         // Parse the payload and check its validity
-        FileAbort abortMessage = JsonUtil.deserialize(message, FileAbort.class);
-        if (!abortMessage.getFileName().equals(fileDownloadSession.getInitMessage().getFileName())) {
+        String fileName = JsonUtil.deserialize(message, String.class);
+
+        if (!fileName.equals(fileDownloadSession.getInitMessage().getFileName())) {
             LOG.warn("Received file transfer abort message with non-matching file name.");
             return;
         }
@@ -271,14 +269,18 @@ public class FileManagementProtocol {
             return;
         }
 
-        // Pass on the payload
-        fileDownloadSession.receiveBytes(message.getPayload());
+        try {
+            // Pass on the payload
+            fileDownloadSession.receiveBytes(message.getPayload());
+        } catch (IllegalStateException | IllegalArgumentException e) {
+            LOG.error("Failed to handle bytes: " + e.getLocalizedMessage());
+        }
     }
 
-    void handleFileTransferRequest(String fileName, int chunkIndex, int chunkSize) {
+    void handleFileTransferRequest(String fileName, int chunkIndex) {
         // Create a message to request the data and send it
-        ChunkRequest chunkRequest = new ChunkRequest(fileName, chunkIndex, chunkSize);
-        publish(FILE_BINARY_REQUEST + client.getClientId(), chunkRequest);
+        ChunkRequest chunkRequest = new ChunkRequest(fileName, chunkIndex);
+        publish(OUT_DIRECTION + client.getClientId() + FILE_BINARY_REQUEST, chunkRequest);
     }
 
     void handleFileTransferFinish(FileDownloadSession session, FileTransferStatus status,
@@ -296,7 +298,7 @@ public class FileManagementProtocol {
             FileStatus statusMessage = new FileStatus(session.getInitMessage().getFileName(), status, error);
             LOG.info("Reporting file transfer as '" + status + "'" +
                     (error != null ? " with error '" + error + "'" : "") + ".");
-            publish(FILE_UPLOAD_STATUS + client.getClientId(), statusMessage);
+            publish(OUT_DIRECTION + client.getClientId() + FILE_UPLOAD_STATUS, statusMessage);
             return;
         }
 
@@ -305,13 +307,13 @@ public class FileManagementProtocol {
             management.createFile(session.getBytes(), session.getInitMessage().getFileName());
 
             // Announce the status for good status, and save the data from file, and publish the file list.
-            publish(FILE_UPLOAD_STATUS + client.getClientId(),
+            publish(OUT_DIRECTION + client.getClientId() + FILE_UPLOAD_STATUS,
                     new FileStatus(session.getInitMessage().getFileName(), status));
             LOG.info("Reporting file transfer as successful. Downloaded file '" +
                     session.getInitMessage().getFileName() + "'.");
         } catch (IOException exception) {
             // Announce a file system error has occurred
-            publish(FILE_UPLOAD_STATUS + client.getClientId(),
+            publish(OUT_DIRECTION + client.getClientId() + FILE_UPLOAD_STATUS,
                     new FileStatus(session.getInitMessage().getFileName(),
                             FileTransferStatus.ERROR, FileTransferError.FILE_SYSTEM_ERROR));
             LOG.info("Reporting file transfer as '" + FileTransferStatus.ERROR +
@@ -334,30 +336,49 @@ public class FileManagementProtocol {
         }
 
         // Parse the initialization message
-        UrlInfo urlInit = JsonUtil.deserialize(message, UrlInfo.class);
+        String fileUrl = JsonUtil.deserialize(message, String.class);
+
+        UrlInfo urlInit = new UrlInfo();
+        urlInit.setFileUrl(fileUrl);
+
         LOG.info("Received URL file download session, with URL '" + urlInit.getFileUrl() + "'.");
 
         // If there is no management, return FILE_SYSTEM_ERROR immediately.
         if (this.management == null) {
             LOG.error("File management is not running, returning '" + FileTransferError.FILE_SYSTEM_ERROR + "'.");
-            publish(FILE_URL_DOWNLOAD_STATUS + client.getClientId(), new UrlStatus(urlInit.getFileUrl(),
+            publish(OUT_DIRECTION + client.getClientId() + FILE_URL_DOWNLOAD_STATUS, new UrlStatus(urlInit.getFileUrl(),
                     FileTransferStatus.ERROR, FileTransferError.FILE_SYSTEM_ERROR));
             return;
         }
 
+        urlDownload(urlInit, null);
+    }
+
+    public synchronized void urlDownload(UrlInfo urlInit, UrlFileDownloadSession.Callback callback) {
+
         // Give the transfer message
-        publish(FILE_URL_DOWNLOAD_STATUS + client.getClientId(),
+        publish(OUT_DIRECTION + client.getClientId() + FILE_URL_DOWNLOAD_STATUS,
                 new UrlStatus(urlInit.getFileUrl(), FileTransferStatus.FILE_TRANSFER));
 
         // Create the session
         if (this.urlFileDownloader == null) {
-            urlFileDownloadSession = new UrlFileDownloadSession(urlInit, (status, error) -> {
-                handleUrlSessionFinish(urlFileDownloadSession, status, error);
+            urlFileDownloadSession = new UrlFileDownloadSession(urlInit, (status, fileName, error) -> {
+                handleUrlSessionFinish(urlFileDownloadSession, status, fileName, error);
+
+                if (callback != null) {
+                    callback.onFinish(status, fileName, error);
+                }
+
                 urlFileDownloadSession = null;
             });
         } else {
-            urlFileDownloadSession = new UrlFileDownloadSession(urlInit, (status, error) -> {
-                handleUrlSessionFinish(urlFileDownloadSession, status, error);
+            urlFileDownloadSession = new UrlFileDownloadSession(urlInit, (status, fileName, error) -> {
+                handleUrlSessionFinish(urlFileDownloadSession, status, fileName, error);
+
+                if (callback != null) {
+                    callback.onFinish(status, fileName, error);
+                }
+
                 urlFileDownloadSession = null;
             }, urlFileDownloader);
         }
@@ -375,8 +396,8 @@ public class FileManagementProtocol {
         }
 
         // Parse the payload, and check its validity
-        UrlAbort abortMessage = JsonUtil.deserialize(message, UrlAbort.class);
-        if (!abortMessage.getFileUrl().equals(urlFileDownloadSession.getInitMessage().getFileUrl())) {
+        String fileUrl = JsonUtil.deserialize(message, String.class);
+        if (!fileUrl.equals(urlFileDownloadSession.getInitMessage().getFileUrl())) {
             LOG.warn("Received URL download abort for non-matching URL paths.");
             return;
         }
@@ -390,7 +411,7 @@ public class FileManagementProtocol {
      * This is the callback method for the URL Download session to handle the result of the session.
      */
     void handleUrlSessionFinish(UrlFileDownloadSession session, FileTransferStatus status,
-                                FileTransferError error) {
+                                String fileName, FileTransferError error) {
         // Null check what needs to be null checked
         if (session == null) {
             throw new IllegalStateException("Handle URL session finish is called with a null session.");
@@ -403,8 +424,8 @@ public class FileManagementProtocol {
         if (status != FileTransferStatus.FILE_READY) {
             LOG.info("Reporting URL file download as '" + status + "'" +
                     (error != null ? " with error '" + error + "'" : "") + ".");
-            UrlStatus statusMessage = new UrlStatus(session.getInitMessage().getFileUrl(), status, error);
-            publish(FILE_URL_DOWNLOAD_STATUS + client.getClientId(), statusMessage);
+            UrlStatus statusMessage = new UrlStatus(session.getInitMessage().getFileUrl(), status, fileName, error);
+            publish(OUT_DIRECTION + client.getClientId() + FILE_URL_DOWNLOAD_STATUS, statusMessage);
             return;
         }
 
@@ -413,13 +434,12 @@ public class FileManagementProtocol {
             management.createFile(session.getFileData(), session.getFileName());
 
             // Announce the status for good status, and save the data from file, and publish the file list now.
-            UrlStatus statusMessage = new UrlStatus(session.getInitMessage().getFileUrl(), FileTransferStatus.FILE_READY,
-                    session.getFileName());
-            publish(FILE_URL_DOWNLOAD_STATUS + client.getClientId(), statusMessage);
-            LOG.info("Reporting URL file download as successful. Downloaded file '" + statusMessage.getFileName() + "'.");
+            UrlStatus statusMessage = new UrlStatus(session.getInitMessage().getFileUrl(), fileName, FileTransferStatus.FILE_READY);
+            publish(OUT_DIRECTION + client.getClientId() + FILE_URL_DOWNLOAD_STATUS, statusMessage);
+            LOG.info("Reporting URL file download as successful. Downloaded file '" + session.getFileName() + "'.");
         } catch (IOException exception) {
             // Announce a file system error has occurred
-            publish(FILE_URL_DOWNLOAD_STATUS + client.getClientId(),
+            publish(OUT_DIRECTION + client.getClientId() + FILE_URL_DOWNLOAD_STATUS,
                     new FileStatus(session.getInitMessage().getFileUrl(),
                             FileTransferStatus.ERROR, FileTransferError.FILE_SYSTEM_ERROR));
             LOG.info("Reporting URL file download as '" + FileTransferStatus.ERROR +
@@ -440,9 +460,15 @@ public class FileManagementProtocol {
             return;
         }
 
-        FileDelete fileDelete = JsonUtil.deserialize(message, FileDelete.class);
-        LOG.info("Received request to delete file '" + fileDelete.getFileName() + "'. Deleting...");
-        management.deleteFile(fileDelete.getFileName());
+        List<String> files = JsonUtil.deserialize(message, List.class);
+        FileDelete fileDelete = new FileDelete(files);
+
+        LOG.info("Received request to delete files '" + fileDelete.getFileNames() + "'. Deleting...");
+
+        for (String file : fileDelete.getFileNames()) {
+            management.deleteFile(file);
+        }
+
         publishFileList();
     }
 
@@ -459,6 +485,7 @@ public class FileManagementProtocol {
 
         LOG.info("Received request to purge file list. Purging...");
         management.purgeDirectory();
+
         publishFileList();
     }
 
@@ -468,38 +495,29 @@ public class FileManagementProtocol {
     void handleFileListRequest(String topic, MqttMessage message) {
         logReceivedMqttMessage(topic, message);
         LOG.info("Received request for the file list. Responding...");
-        publishFileList(FILE_LIST_RESPONSE + client.getClientId());
+        publishFileList();
     }
 
     /**
      * This is the method that is used to capture the file list and send it.
-     * This one takes in a topic to which the message will be sent.
-     *
-     * @param topic The topic to which the message will be sent.
      */
-    private void publishFileList(String topic) {
+    public void publishFileList() {
         // Stored values;
-        List<String> files;
         List<FileInformation> payload;
 
         // Acquire all the files
         try {
-            files = management.listAllFiles();
-            LOG.trace("Peeked the file system to find files, found " + files.size() + " files.");
+            payload = management.listAllFiles();
+            LOG.trace("Peeked the file system to find files, found " + payload.size() + " files.");
         } catch (IOException exception) {
             LOG.error("Error occurred during reading of folder contents.", exception);
             return;
         }
 
-        // Place them all in the payload
-        payload = new ArrayList<>();
-        for (String file : files) {
-            payload.add(new FileInformation(file));
-        }
         LOG.trace("Created payload to announce '" + payload + "'.");
 
         // Send everything
-        publish(topic, payload);
+        publish(OUT_DIRECTION + client.getClientId() + FILE_LIST, payload);
     }
 
     /**
@@ -532,7 +550,7 @@ public class FileManagementProtocol {
      */
     private void publish(String topic, Object payload) {
         try {
-            LOG.debug("Publishing to '" + topic + "' payload: " + payload);
+            LOG.debug("Publishing to '" + topic + "' payload: " + new String(JsonUtil.serialize(payload), StandardCharsets.UTF_8));
             client.publish(topic, JsonUtil.serialize(payload), QOS, false);
         } catch (MqttException e) {
             final String message = "MQTT error occurred while publishing a message to topic : '" +
